problem with latest work

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
         <div class="half-width">
             <div class="name">
-                <h3>Hello I'm</h3>
+                <h3 style="font-size: 80px;">Hello I'm</h3>
             <h1><span class="my-name">DEBOJIT BASAK</span></h1>        
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus dolore eligendi amet error ipsum quasi quaerat fuga molestia</p>
-            <a class="link-button" href="https://www.linkedin.com/in/debojit-basak-6202711a6/" target="_blank">HIRE ME</a>
+            <a class="link-button" href="https://www.linkedin.com/in/debojit-basak-6202711a6/" target="_blank" style="font-size: 60px;">HIRE ME</a>
        </div>
 
         </div>
@@ -31,11 +31,11 @@
         <div class="half-width">
             <h2 class="change">BIOGRAPHY</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A magni magnam facere voluptates repellendus vitae, ut explicabo molestiae? Natus mollitia autem vel incidunt quam aperiam perspiciatis cupiditate, accusantium numquam praesentium!</p>
-            <a class="link-button" href="https://www.linkedin.com/in/debojit-basak-6202711a6/" target="_blank">Download my CV</a>
+            <a class="link-button" href="https://www.linkedin.com/in/debojit-basak-6202711a6/" target="_blank" style="font-size: 60px;">Download my CV</a>
        </div>
         </div>
 
-    </section>
+    </section class="latest-work">
     <section>
         <div class="div-heading">
             <h3 class="div-heading">Latest works</h3>
@@ -43,23 +43,23 @@
         </div>
         <div>
             <div><img src="images/latest-work/work-1.png" alt="work1"></div>
-            <div><img src="images/latest-work/work-2.jpg" alt="work2"></div>
-            <div><img src="images/latest-work/work-3.jpg" alt="work3"></div>
+            <div><img src="images/latest-work/work-2.png" alt="work2"></div>
+            <div><img src="images/latest-work/work-3.png" alt="work3"></div>
         </div>
 
     </section>
     
     <section class="footer">
-        <div class="clients">
+        <footer class="clients">
                <div>
-                <h1>What clients say</h1>
-                <h2>Sundar Pichai</h2>
-                <h3>CEO, GOOGLE</h3>
+                <h1 style="font-size: 70px;">What clients say</h1>
+                <h2 style="font-size:90px;" style="color: darkcyan;">Sundar Pichai</h2>
+                <h3 style="font-size: 60px;">CEO, GOOGLE</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
                 <p>Earum libero accusantium odit veritatis </p> 
-                <a class="link-button" href="https://www.linkedin.com/in/debojit-basak-6202711a6/" target="_blank">Learn more about me</a>
+                <a class="link-button" href="https://www.linkedin.com/in/debojit-basak-6202711a6/" target="_blank" style="font-size: 60px; ">Learn more about me</a>
                </div>
-            </div>
+        </footer>
     </section>
     
 </body>
