--- a/index.html
+++ b/index.html
@@ -38,14 +38,16 @@
     </section>
     <section class="latest-work">
         <div class="div-heading">
-            <h3 class="div-heading">Latest works</h3>
+            <h3>Latest works</h3>
+        </div>
+    </div>
+    <div class="row">
+        <div class="column"><img src="images/latest-work/work-1.png" alt="work1"></div>
+        <div class="column"><img src="images/latest-work/work-2.png" alt="work2"></div>
+        <div class="column"><img src="images/latest-work/work-3.png" alt="work3"></div>
+    </div>
 
-        </div>
-        <div class="row">
-            <div class="column"><img src="images/latest-work/work-1.png" alt="work1"></div>
-            <div class="column"><img src="images/latest-work/work-2.png" alt="work2"></div>
-            <div class="column"><img src="images/latest-work/work-3.png" alt="work3"></div>
-        </div>
+       
 
     </section>
     
