--- a/index.html
+++ b/index.html
@@ -36,16 +36,14 @@
         </div>
 
     </section>
-    <section class="latest-work">
-        <div class="div-heading">
-            <h3>Latest works</h3>
+    <section class="sec3">
+        <h2>My Latest Work</h2>
+        <div class="works-container">
+            <div class="work"> <img src="images/latest-work/work-1.png" alt="" style="width: 100%;"> </div>
+            <div class="work"> <img src="images/latest-work/work-2.jpg" alt="" style="width: 100%;"></div>
+            <div class="work"> <img src="images/latest-work/work-3.jpg" alt="" style="width: 100%;"></div>
         </div>
-    </div>
-    <div class="row">
-        <div class="column"><img src="images/latest-work/work-1.png" alt="work1"></div>
-        <div class="column"><img src="images/latest-work/work-2.png" alt="work2"></div>
-        <div class="column"><img src="images/latest-work/work-3.png" alt="work3"></div>
-    </div>
+    </section>
 
        
 
